data/derived/comb/progs/unify/prog2287.ml.out
Characters 111-135:
  | Sine(e1) -> let ans = sin(pi *. eval(e1,x,y)) in Printf.printf "sine is "
                                                     ^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type unit but an expression was expected of type
         float
